# Copyright 2021 LG Electronics, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

action("doxygen") {
  script = "doxygen_action.py"

  args = [
    rebase_path("Doxyfile", root_build_dir)
  ]

  sources = [
    "//neva/app_runtime/public/webview_base.h"
  ]

  outputs = [ "$root_out_dir/html/index.html" ]
}

