# Copyright 2022 LG Electronics, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

import("//build/config/chromeos/ui_mode.gni")
import("//build/config/features.gni")
import("//build/config/linux/pkg_config.gni")
import("//build/config/ui.gni")
import("//media/gpu/args.gni")
import("//neva/neva.gni")
import("//tools/generate_stubs/rules.gni")
import("//ui/gl/features.gni")

assert(use_webos_codec)

pkg_config("media_webos_codec_config") {
  packages = [
    "media-codec-interface",
    "gstreamer-1.0",
  ]
}

source_set("webos") {
  defines = [ "MEDIA_GPU_IMPLEMENTATION" ]
  sources = [
    "webos_codec_utils.cc",
    "webos_codec_utils.h",
    "webos_vda_utils.cc",
    "webos_vda_utils.h",
    "webos_video_decode_accelerator.cc",
    "webos_video_decode_accelerator.h",
    "webos_video_encode_accelerator.cc",
    "webos_video_encode_accelerator.h",
  ]

  libs = [
    "EGL",
    "GLESv2",
  ]

  configs += [
    ":media_webos_codec_config",
    "//third_party/libyuv:libyuv_config",
  ]

  public_deps = [ "//ui/gl" ]

  deps = [
    "//base",
    "//gpu/ipc/common",
    "//gpu/ipc/service",
    "//media",
    "//media/gpu:buildflags",
    "//media/gpu:common",
    "//media/gpu/chromeos:common",
    "//media/gpu:video_frame_mapper_common",
    "//media/parsers",
    "//third_party/libyuv",
    "//ui/gfx/geometry",
    "//ui/ozone",
  ]
}