# Copyright 2022 LG Electronics, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

import("//third_party/protobuf/proto_library.gni")

webrisk_sources = [
  "//extensions/shell/neva/webrisk/core/webrisk_fetch_hashes.cc",
  "//extensions/shell/neva/webrisk/core/webrisk_fetch_hashes.h",
  "//extensions/shell/neva/webrisk/core/webrisk_search_hashes.cc",
  "//extensions/shell/neva/webrisk/core/webrisk_search_hashes.h",
  "//extensions/shell/neva/webrisk/core/webrisk_store.cc",
  "//extensions/shell/neva/webrisk/core/webrisk_store.h",
  "//extensions/shell/neva/webrisk/malware_detection_service_impl.cc",
  "//extensions/shell/neva/webrisk/malware_detection_service_impl.h",
]
