# Copyright 2021 LG Electronics, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

import("//mojo/public/tools/bindings/mojom.gni")

mojom("mojom") {
  sources = [ "mojom/video_window_provider.mojom" ]
  public_deps = [
    "//mojo/public/mojom/base",
    "//ui/gfx/geometry/mojom",
    "//ui/gfx/mojom",
    "//ui/platform_window:mojom",
  ]
}

source_set("neva") {
  sources = [
    "video_window.h",
    "video_window_controller.h",
    "video_window_controller_impl.cc",
    "video_window_controller_impl.h",
    "video_window_controller_mojo.cc",
    "video_window_controller_mojo.h",
    "video_window_provider.h",
    "video_window_provider_delegate.h",
    "video_window_provider_impl.cc",
    "video_window_provider_impl.h",
    "video_window_provider_mojo.cc",
    "video_window_provider_mojo.h",
  ]

  public_deps = [
    ":mojom",
    "//ui/platform_window",
  ]
}
