# Copyright 2021 LG Electronics, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

import("//third_party/wayland/wayland_protocol.gni")

visibility = [ "//ui/ozone/*" ]

wayland_protocol("agl_shell_protocol") {
  sources = [ "protocol/agl-shell.xml" ]
}

source_set("agl") {
  sources = [
    "common/wayland_object_agl.cc",
    "common/wayland_object_agl.h",
    "host/agl_shell_wrapper.cc",
    "host/agl_shell_wrapper.h",
    "host/wayland_extensions_agl.h",
    "host/wayland_extensions_agl_impl.cc",
    "host/wayland_extensions_agl_impl.h",
    "host/wayland_window_agl.cc",
    "host/wayland_window_agl.h",
  ]

  deps = [
    ":agl_shell_protocol",
    "//ui/ozone/public/mojom/wayland:wayland_mojom",
  ]
}